* add sign up form * add click event for buttons in sign up form * fix the issue where the manga div tag could not wrap when adjusting the page size * fix some minor css errors * temporarily lock the hover event to show MangaInfoOverlay to fix the error

--- a/app/components/new-manga-update/NewMangaUpdate.css
+++ b/app/components/new-manga-update/NewMangaUpdate.css
@@ -8,8 +8,8 @@
     left: 50%;
     transform: translate(-50%, -50%) scale(0.8);
     opacity: 0;
-    z-index: 1;
-    transition: transform 1.2s ease, opacity 0.4s ease;
+    z-index: 2;
+    transition: transform 0.8s ease, opacity 0.4s ease;
 }
 
 .manga:hover .manga-info-overlay { 
